---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Create a gui to house my mods
    - Poor attempt at putting them all in a table
    - Add a scroll bar
    - Use an actual table
    - More tinkering with styles
    - Well sprite buttons just look horid when stretchd
    - Sort mods newest first
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 11. 01
  Info:
    - Strip out space exploration compatibility
    - Replace ' with "
    - Play around with the objectives window
    - Clear the goal description when hovered
    - Begin generation of the newsletter database
    - Allow chatgtp a chance at doing the conversion
    - Attempt to leverage helpers.json_to_table
    - Pack all my mod info in a 100 kb lua file
    - Pack it within 57 kb
    - Move database into the scripts folder
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 01
  Info:
    - Ported to 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 02. 01
  Info:
    - Stash proof of concept
    - Swap the sprite tags out for the all-in-one icon flag
    - Create a textarea when you click the link
    - Close the textfield when you click somewhere else
    - Prevent multiple textboxes from existing
    - Use an arrow instead of a :
    - Destroy the textfield when you input (e.g. wasd walk)
    - mod_prefix ..
    - Shorten it to leftclick
    - Cleanup
    - Stash comments (2024. 03. 15)